# mlo

./: .gitignore  .pre-commit-config.yaml  bash_script.sh  copilot.py  pyproject.toml  requirements.txt  script.py
.github/workflows/: pre_commit.yaml
corruptmnist/: launch.json  main.py
mlo_project/: LICENSE  README.md  index.html  pyproject.toml  tasks.py
mlo_project/.devcontainer/: devcontainer.json
mlo_project/dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
mlo_project/docs/: index.html  mkdocs.yaml
mlo_project/docs/source/: index.html  index.md
mlo_project/models/: model.pth
mlo_project/src/mlo_model/: data.py  dataset.py  evaluate.py  main.py  model.py  train.py  visualize.py
mlo_project/src/mlo_model/config/: config.yaml
mlo_project/tests/: test_data.py
s1_development_environment/exercise_files/: 1_Tensors_in_PyTorch.py  2_Neural_Networks_in_PyTorch.py
s1_development_environment/package_manager/: index.html
s3_reproducibility/exercise_files/config/: config.yaml
s3_reproducibility/exercise_files/vae_solution/: vae_mnist.py
s4_debugging_and_logging/exercise_files/: vae_mnist_bugs.py
s7_deployment/: main.py  testing_script.py
s7_deployment/ml/: main.py
s7_deployment/ml_deployment/: index.html
search/: search_index.json
