[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[project]
name = "mlo-model"
version = "0.0.1"
description = "MLO Course project with cookiecutter structure"
readme = "README.md"
keywords = [ "machine learning", "MLOps" ]
license = { file = "LICENSE" }
authors = [
  { name = "kadijairus", email = "your@email.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "dotenv>=0.9.9",
  "fastapi==0.115.6",
  "hydra-core>=1.3.2",
  "matplotlib>=3.10.8",
  "pytorch-lightning>=2.6.0",
  "torch==2.6",
  "typer==0.15.1",
  "uvicorn==0.34",
  "wandb>=0.23.1",
]

[dependency-groups]
dev = [
  "coverage==7.6.9",
  "invoke==2.2",
  "mkdocs==1.6.1",
  "mkdocs-material==9.4.6",
  "mkdocstrings-python==1.12.2",
  "pre-commit==4.1",
  "pytest==8.3.4",
  "ruff==0.1.3",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = [ "tests/*" ]
